...
    let view = TitleInfoView()
    view.title = L.addCreditCardTitle
    view.subTitle = L.addCreditCardMessage
    return view
  }()
  
  private lazy var openBrowserButton: PrimaryButton = {
    let button = PrimaryButton()
    button.setTitle(L.openBrowser, for: .normal)
    button.setTitleForLoadingState(L.opening)
    button.addTarget(self, action: #selector(openBrowserButtonDidTap), for: .touchUpInside)
    button.accessibilityIdentifier = "openBrowserButton"
    return button
  }()
  
  private lazy var doneButton: NonPrimaryButton = {
    let button = NonPrimaryButton()
    button.setTitle(L.done, for: .normal)
    button.addTarget(self, action: #selector(doneButtonDidTap), for: .touchUpInside)
    button.accessibilityIdentifier = "doneButton"
    return button
  }()
...
